--- a/css/styles.css
+++ b/css/styles.css
@@ -1140,5 +1140,30 @@ img {
 }
 
 
+/* --THIS IS MY HOMEWORK 7--*/
+
+@media   screen and (min-width: 428px) {
+     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
+          background: var(--WHITE, #FFF);
+          box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.nav-menu-liststyle {
+     list-style: none;
+     padding: 24px 297px 22px 16px;
+}
+
+.container {
+     width: 320px;
+}
+
+.top-line-bg {
+     width: 428px;
+     height: 796px;
+     flex-shrink: 0;
+     background: var(--WHITE, #FFF);
+     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
 
 
