--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,5 @@
 
-*,
-*::before,
-*::after {
-     box-sizing: border-box;
-     padding: 0;
-     margin: 0;
-}
+
 
 :root {
      --CLOUD: #F4F4FD;
@@ -32,13 +26,9 @@
 }
 
 body {
-     font-family: 'Roboto', sans-serif;
-     color: var(--SLATE, #434455);
-     background-color: var(--WHITE, #fff);
-     font-size: 16px;
-     font-style: normal;
-     line-height: 1.5;
-     letter-spacing: 0.32px;
+     width: 428px;
+     height: 4926px;
+     flex-shrink: 0;
 }
 
 a {
@@ -59,19 +49,12 @@ img {
      width: 100%;
 }
 
-.container {
-     width: 1158px;
-     margin: 0 auto;
-}
-
-
 
          /*THIS IS MY HOMEWORK 6- MAIN PAGE */
 
          /*HEADER*/
 
 .header {
-     padding: 24px 0;
      border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
      background: var(--WHITE, #FFF);
           /* x-offset y-offset blur spread color */
@@ -94,7 +77,6 @@ img {
 
 .studio {
      color: var(--NAVY-BLUE, #2E2F42);
-     margin-right: 76px;
 }
 
 .link-style-menu {
@@ -179,91 +161,14 @@ img {
 .address-contact-list .contact-color-menu:active {
      color: #31D0AA;
 }
-            
-           /*FIRST SECTION HERO*/
 
-
-
-.first-section-header  {
-     color: var(--white);
-     text-align: center;
-     font-size: 56px;
-     font-weight: 700;
-     line-height: 1.07;
-     letter-spacing: 0.02em;
-     max-width: 496px;
-     margin: 0 auto 48px;
- }
-
-.first-section-button {
-     color: var(--white);
-     font-family: 'Roboto', sans-serif;
-     font-weight: 500;
-     font-size: 16px;
-     line-height: 1.5;
-     letter-spacing: 0.04em;
-     cursor: pointer;
-     display: block;
-     min-width: 169px;
-     height: 56px;
-     border: none;
-     border-radius: 4px;
-     margin: 0 auto;
-     display: inline-flex;
-     padding: 16px 32px;
-     align-items: flex-start;
-     gap: 10px;border-radius: 4px;
-     background-color: var(--IRIS, #4D5AE5);
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
- }
-
-
-
-.first-section {
-     background-color: var(--NAVY-BLUE, #2E2F42);
-     max-width: 1440px;
-     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-               url(../images/img-name.jpg);
-     background-repeat: no-repeat;
-     background-position: center;
-     background-size: cover;
-     margin: 0 auto;
-     text-align: center;
-     padding: 191px 185px;
- }
-
- .first-section-button:hover {
-      background-color: #404BBF;
- }
-
-.first-section-button:focus {
-      background-color: #404BBF;
- }
-
- .first-section-button {
-      cursor: pointer;
- }
-
-                   
 
                  /*SECOND SECTION*/
 
 
-.second-section {
-     padding-top: 123px;
-     margin-bottom: 120px;
-}
 
 .feature-item-icons {
-     padding: 24px 100px;
-     margin-bottom: 8px;
-     border-radius: 4px;
-     background: var(--CLOUD, #f4f4f4);
-     min-height: 112px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
+    display: none;
 }
 
 .visually-hidden {
@@ -279,23 +184,11 @@ img {
      overflow: hidden;
 }
 
-.list-features {
-     display: flex;
-     gap: 24px;
-}
-
 .about-features {
      width: calc((100% - 72px) / 4);
 }
 
-.second-section-header {
-     font-size: 20px;
-     font-weight: 500;
-     line-height: 24px;
-          /* 120% */
-     letter-spacing: 0.4px;
-     margin-bottom: 8px;
-}
+
 
          /* THIRD SECTION/*
 
@@ -711,7 +604,6 @@ img {
 
 .studio {
      color: var(--NAVY-BLUE, #2E2F42);
-     margin-right: 76px;
 }
 
 .link-style-menu {
@@ -1142,28 +1034,151 @@ img {
 
 /* --THIS IS MY HOMEWORK 7--*/
 
-@media   screen and (min-width: 428px) {
-     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-          background: var(--WHITE, #FFF);
-          box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+@media screen  and (min-width: 428px) and (max-width: 767px) {
+     .header .container {
+         max-width: 767px;
+          margin: 0 auto;
+     }
 }
 
-.nav-menu-liststyle {
-     list-style: none;
+@media screen and (min-width: 428px) and (max-width: 767px) {
+     .style-list,
+     .address-contact-list {
+          display: none;
+     }
+}
+
+.logo-style {
      padding: 24px 297px 22px 16px;
 }
 
-.container {
-     width: 320px;
+.hamburger-icon {
+     position: relative;
+     display: flex;
 }
 
-.top-line-bg {
+.hamburger-icon span {
+     width: 36px;
+     height: 4px;
+}
+
+
+
+.first-section-header {
+     text-align: center;
+     font-family: Roboto;
+     font-size: 36px;
+     font-style: normal;
+     font-weight: 700;
+     line-height: 40px;
+     letter-spacing: 0.72px;
+     text-transform: capitalize;
+     margin: 0 auto;
+}
+
+.first-section {
      width: 428px;
-     height: 796px;
+     height: 432px;
      flex-shrink: 0;
-     background: var(--WHITE, #FFF);
-     box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.first-section {
+     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+          url(../images/img-name.jpg);
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
+}
+
+.first-section-container {
+     align-items: center;
+     justify-content: center;
+     display: flex;
+     flex-direction: column;
+     margin: auto;
+     padding: 112px 54px;
+}
+
+.first-section-button:hover {
+     background-color: #404BBF;
+}
+
+.first-section-button:focus {
+     background-color: #404BBF;
 }
 
 
+.first-section-header {
+     color: var(--WHITE, #FFF);
+}
+
+.first-section-button {
+     color: var(--white);
+     font-family: 'Roboto', sans-serif;
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 1.5;
+     letter-spacing: 0.04em;
+     cursor: pointer;
+     display: block;
+     min-width: 169px;
+     height: 56px;
+     border: none;
+     border-radius: 4px;
+     margin-top: 72px;
+     display: inline-flex;
+     padding: 16px 32px;
+     align-items: flex-start;
+     gap: 10px;
+     border-radius: 4px;
+     background-color: var(--IRIS, #4D5AE5);
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 428px) and (max-width: 767px) {
+     .list-features {
+          display: inline-flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 72px;
+          padding: 0;
+          margin: 96px 16px;
+     }
+}
+
+.second-section {
+     height: 816px;
+}
+
+.text-description .none {
+     margin-bottom: 0;
+}
+
+.text-description {
+     display: flex;
+     width: 396px;
+     flex-direction: column;
+     align-items: flex-start;
+     gap: 8px;
+}
+.second-section-header {
+     color: var(--NAVY-BLUE, #2E2F42);
+          text-align: center;
+     
+          /* Header 2 */
+          font-family: Roboto;
+          font-size: 36px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 40px;
+          /* 111.111% */
+          letter-spacing: 0.72px;
+          text-transform: capitalize;
+          margin: 0 auto;
+}
+
+.second-section-paragraph {
+     margin: 0 auto;
+}
 
