--- a/css/styles.css
+++ b/css/styles.css
@@ -236,21 +236,7 @@ img {
                     
                /*FOURTH SECTION */
                          
-.list-our-teams {
-     display: flex;
-     justify-content: space-between;
-     gap: 24px;
-}
 
-.fourth-section-header {
-     font-size: 36px;
-     line-height: 1.11;
-     color: var(--NAVY-BLUE);
-     text-align: center;
-     letter-spacing: 0.02em;
-     text-transform: capitalize;
-     margin-bottom: 72px;
-}
 
 .team-member-bgcolor {
           background-color: var(--WHITE);
@@ -261,30 +247,10 @@ img {
           box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
                0px 1px 1px rgba(46, 47, 66, 0.16),
                0px 2px 1px rgba(46, 47, 66, 0.08);
-     }
-
-.card-content-name {
-     margin: 32px 0;
-}
-
-.team-member-name {
-     font-size: 20px;
-     font-weight: 500;
-     line-height: 24px;
-          /* 120% */
-     letter-spacing: 0.4px;
-     text-align: center;
-     margin-bottom: 8px;
-}
-
-.team-member-position {
-     text-align: center;
-     padding: 8px;
 }
 
 .fourth-section-ourteam {
      background-color: var(--CLOUD);
-     padding: 120px 0;
 }
 
 .social-media-list {
@@ -1136,6 +1102,8 @@ img {
      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
+/*--SECOND SECTION--*/
+
 @media screen and (min-width: 428px) and (max-width: 767px) {
      .list-features {
           display: inline-flex;
@@ -1182,3 +1150,109 @@ img {
      margin: 0 auto;
 }
 
+/*--THIRD SECTION--*/
+
+.third-section {
+     display: none;
+}
+
+@media  screen and (min-width: 428px) and(max-width: 767px) {
+     .fourth-section-ourteam {
+          width: 428px;
+          height: 2232px;
+          flex-shrink: 0;
+          padding: 96px 133px;
+          background: var(--CLOUD, #F4F4FD);
+     }
+}
+
+/*--FOURTH SECTION--*/
+
+@media   screen and (min-width: 428px) and (max-width: 767px) {
+     .fourth-section-header {
+          color: var(--NAVY-BLUE, #2E2F42);
+               text-align: center;
+          
+               /* Header 2 */
+               font-family: Roboto;
+               font-size: 36px;
+               font-style: normal;
+               font-weight: 700;
+               line-height: 40px;
+               /* 111.111% */
+               letter-spacing: 0.72px;
+               text-transform: capitalize;
+               margin: 0 auto;
+     }
+}
+
+
+.list-our-teams {
+     display: inline-flex;
+     flex-direction: column;
+     align-items: center;
+     gap: 72px;
+     padding: 0;
+     margin: 0 auto;
+}
+
+.team-member-bgcolor {
+     display: flex;
+     width: 264px;
+     padding-bottom: 32px;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     gap: 32px;
+}
+
+.fourth-section-ourteam {
+     padding: 96px 82px;
+     width: 428px;
+     height: 2232px;
+     flex-shrink: 0;
+     background: var(--CLOUD, #F4F4FD);
+}
+
+.social-media-list {
+     padding: 0;
+}
+
+.team-member-position {
+     color: var(--SLATE, #434455);
+     text-align: center;
+     
+          /* Body */
+     font-family: Roboto;
+     font-size: 16px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 24px;
+          /* 150% */
+     letter-spacing: 0.32px;
+     margin: 0 auto;
+}
+
+ .team-member-name {
+     color: var(--NAVY-BLUE, #2E2F42);
+          text-align: center;
+     
+          /* Header 3 */
+     font-family: Roboto;
+     font-size: 20px;
+     font-style: normal;
+     font-weight: 500;
+     line-height: 24px;
+          /* 120% */
+     letter-spacing: 0.4px;
+     margin: 0 auto;
+ }
+
+ .card-content-name {
+     display: flex;
+          width: 232px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 8px;
+ }
